--- a/ShopApi/Infrastructure/Infrastructure.csproj
+++ b/ShopApi/Infrastructure/Infrastructure.csproj
@@ -16,4 +16,9 @@
       <ProjectReference Include="..\DAL\DAL.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    </ItemGroup>
+
 </Project>
