--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.0",
     "axios": "^1.2.4",
     "dompurify": "^2.4.3",
     "formik": "^2.2.9",
@@ -31,6 +32,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
